Menambahkan isi deskripsi pada tabel dan menambahkan button pada tabel

--- a/home.html
+++ b/home.html
@@ -9,21 +9,53 @@
     <div class="judul">
         <h2>DW-Imcomp</h2>
     </div>
-    <div>
-        <button class="buttonadd">Add Importir</button>
-        <button class="buttonadd">Add Product</button>
+    <div id="button">
+        <button type="button" class="buttonadd">Add Importir</button>
+        <button type="button" class="buttonadd">Add Product</button>
     </div>
-    <div>
+    <div class="produk">
         <table>
             <tr>
-                <td><img src="./Images/carousell.jpg">Carousell</td>
-                <td><img src="./Images/damai fashion.jpg">Damai Fashion</td>
-                <td><img src="./Images/delaya outher.jpg">Delaya Outher</td>
-                <td><img src="./Images/jaket sweater.jpg">Jaket Sweater</td>
-                <td><img src="./Images/lemon crop.jpg">Lemon Crop</td>
-                <td><img src="./Images/sailor.jpg">Sailor Top</td>
-                <td><img src="./Images/set sunday.jpg">Set Sunday</td>
-                <td><img src="./Images/sweater rajut.jpg">Sweater Rajut</td>
+                <td><img src="./Images/carousell.jpg"><span>Carousell</span>
+                <h6>Shoree</h6>
+                <h5>Rp. 84.999,-</h5>
+                <h6>Stock</h6>
+                <button>Detail</button></td>
+                <td><img src="./Images/damai fashion.jpg"><span>Damai Fashion</span>
+                    <h6>Shoree</h6>
+                    <h5>Rp. 84.999,-</h5>
+                    <h6>Stock</h6>
+                    <button>Detail</button></td>
+                <td><img src="./Images/delaya outher.jpg"><span>Delaya Outher</span>
+                    <h6>Shoree</h6>
+                    <h5>Rp. 84.999,-</h5>
+                    <h6>Stock</h6>
+                    <button>Detail</button></td>
+                <td><img src="./Images/jaket sweater.jpg"><span>Jaket Sweater</span>
+                    <h6>Shoree</h6>
+                    <h5>Rp. 84.999,-</h5>
+                    <h6>Stock</h6>
+                    <button>Detail</button></td>
+                <td><img src="./Images/lemon crop.jpg"><span>Lemon Crop</span>
+                    <h6>Shoree</h6>
+                    <h5>Rp. 84.999,-</h5>
+                    <h6>Stock</h6>
+                    <button>Detail</button></td>
+                <td><img src="./Images/sailor.jpg"><span>Sailor Top</span>
+                    <h6>Shoree</h6>
+                    <h5>Rp. 84.999,-</h5>
+                    <h6>Stock</h6>
+                    <button>Detail</button></td>
+                <td><img src="./Images/set sunday.jpg"><span>Set Sunday</span>
+                    <h6>Shoree</h6>
+                    <h5>Rp. 84.999,-</h5>
+                    <h6>Stock</h6>
+                    <button>Detail</button></td>
+                <td><img src="./Images/sweater rajut.jpg"><span>Sweater Rajut</span>
+                    <h6>Shoree</h6>
+                    <h5>Rp. 84.999,-</h5>
+                    <h6>Stock</h6>
+                    <button>Detail</button></td>
             </tr>
         </table>
     </div>
