Menambahkan padding dan margin pada button add

--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
 <body>
     
     <div class="judul">
-        <h2>DW-Imcomp</h2>
+        <h2><span>DW-</span>Imcomp</h2>
     </div>
     <div id="button">
         <button type="button" class="buttonadd">Add Importir</button>
@@ -17,10 +17,10 @@
         <table>
             <tr>
                 <td><img src="./Images/carousell.jpg"><span>Carousell</span>
-                <h6>Shoree</h6>
-                <h5>Rp. 84.999,-</h5>
-                <h6>Stock</h6>
-                <button>Detail</button></td>
+                    <h6>Shoree</h6>
+                    <h5>Rp. 84.999,-</h5>
+                    <h6>Stock</h6>
+                    <button>Detail</button></td>
                 <td><img src="./Images/damai fashion.jpg"><span>Damai Fashion</span>
                     <h6>Shoree</h6>
                     <h5>Rp. 84.999,-</h5>
