Menambahkan table pada masing2 produk

--- a/home.html
+++ b/home.html
@@ -21,36 +21,64 @@
                     <h5>Rp. 84.999,-</h5>
                     <h6>Stock</h6>
                     <button>Detail</button></td>
+            </tr>
+        </table>
+        <table>
+            <tr>
                 <td><img src="./Images/damai fashion.jpg"><span>Damai Fashion</span>
                     <h6>Shoree</h6>
                     <h5>Rp. 84.999,-</h5>
                     <h6>Stock</h6>
                     <button>Detail</button></td>
+            </tr>
+        </table>
+        <table>
+            <tr>
                 <td><img src="./Images/delaya outher.jpg"><span>Delaya Outher</span>
                     <h6>Shoree</h6>
                     <h5>Rp. 84.999,-</h5>
                     <h6>Stock</h6>
                     <button>Detail</button></td>
+            </tr>
+        </table>
+        <table>
+            <tr>
                 <td><img src="./Images/jaket sweater.jpg"><span>Jaket Sweater</span>
                     <h6>Shoree</h6>
                     <h5>Rp. 84.999,-</h5>
                     <h6>Stock</h6>
                     <button>Detail</button></td>
+            </tr>
+        </table>
+        <table>
+            <tr>
                 <td><img src="./Images/lemon crop.jpg"><span>Lemon Crop</span>
                     <h6>Shoree</h6>
                     <h5>Rp. 84.999,-</h5>
                     <h6>Stock</h6>
                     <button>Detail</button></td>
+            </tr>
+        </table>
+        <table>
+            <tr>
                 <td><img src="./Images/sailor.jpg"><span>Sailor Top</span>
                     <h6>Shoree</h6>
                     <h5>Rp. 84.999,-</h5>
                     <h6>Stock</h6>
                     <button>Detail</button></td>
+            </tr>
+        </table>
+        <table>
+            <tr>
                 <td><img src="./Images/set sunday.jpg"><span>Set Sunday</span>
                     <h6>Shoree</h6>
                     <h5>Rp. 84.999,-</h5>
                     <h6>Stock</h6>
                     <button>Detail</button></td>
+            </tr>
+        </table>
+        <table>
+            <tr>
                 <td><img src="./Images/sweater rajut.jpg"><span>Sweater Rajut</span>
                     <h6>Shoree</h6>
                     <h5>Rp. 84.999,-</h5>
