merubah isi deskripsi

--- a/home.html
+++ b/home.html
@@ -9,80 +9,88 @@
     <div class="judul">
         <h2><span>DW-</span>Imcomp</h2>
     </div>
-    <div id="button">
+    <div class="button">
         <button type="button" class="buttonadd">Add Importir</button>
         <button type="button" class="buttonadd">Add Product</button>
     </div>
     <div class="produk">
         <table>
             <tr>
-                <td><img src="./Images/carousell.jpg"><span>Carousell</span>
+                <td><img src="./Images/carousell.jpg">
                     <h6>Shoree</h6>
-                    <h5>Rp. 84.999,-</h5>
                     <h6>Stock</h6>
+                    <h4>Carousell</h4>
+                    <h5>Rp. 84.999,-</h5>          
                     <button>Detail</button></td>
             </tr>
         </table>
         <table>
             <tr>
-                <td><img src="./Images/damai fashion.jpg"><span>Damai Fashion</span>
-                    <h6>Shoree</h6>
-                    <h5>Rp. 84.999,-</h5>
+                <td><img src="./Images/damai fashion.jpg">
+                    <h6>Shoree</h6>                  
                     <h6>Stock</h6>
+                    <h4>Damai Fashion</h4>
+                    <h5>Rp. 84.999,-</h5>
                     <button>Detail</button></td>
             </tr>
         </table>
         <table>
             <tr>
-                <td><img src="./Images/delaya outher.jpg"><span>Delaya Outher</span>
-                    <h6>Shoree</h6>
-                    <h5>Rp. 84.999,-</h5>
+                <td><img src="./Images/delaya outher.jpg">
+                    <h6>Shoree</h6>                   
                     <h6>Stock</h6>
+                    <h4>Delaya Outher</h4>
+                    <h5>Rp. 84.999,-</h5>
                     <button>Detail</button></td>
             </tr>
         </table>
         <table>
             <tr>
-                <td><img src="./Images/jaket sweater.jpg"><span>Jaket Sweater</span>
-                    <h6>Shoree</h6>
-                    <h5>Rp. 84.999,-</h5>
+                <td><img src="./Images/jaket sweater.jpg">
+                     <h6>Shoree</h6>
                     <h6>Stock</h6>
+                    <h4>Jaket Sweater</h4>
+                    <h5>Rp. 84.999,-</h5>
                     <button>Detail</button></td>
             </tr>
         </table>
         <table>
             <tr>
-                <td><img src="./Images/lemon crop.jpg"><span>Lemon Crop</span>
+                <td><img src="./Images/lemon crop.jpg">
                     <h6>Shoree</h6>
-                    <h5>Rp. 84.999,-</h5>
                     <h6>Stock</h6>
+                    <h4>Lemon Crop</h4>
+                    <h5>Rp. 84.999,-</h5>
                     <button>Detail</button></td>
             </tr>
         </table>
         <table>
             <tr>
-                <td><img src="./Images/sailor.jpg"><span>Sailor Top</span>
+                <td><img src="./Images/sailor.jpg">
                     <h6>Shoree</h6>
-                    <h5>Rp. 84.999,-</h5>
                     <h6>Stock</h6>
+                    <h4>Sailor Top</h4>
+                    <h5>Rp. 84.999,-</h5>
                     <button>Detail</button></td>
             </tr>
         </table>
         <table>
             <tr>
-                <td><img src="./Images/set sunday.jpg"><span>Set Sunday</span>
+                <td><img src="./Images/set sunday.jpg">
                     <h6>Shoree</h6>
-                    <h5>Rp. 84.999,-</h5>
                     <h6>Stock</h6>
+                    <h4>Set Sunday</h4>
+                    <h5>Rp. 84.999,-</h5>
                     <button>Detail</button></td>
             </tr>
         </table>
         <table>
             <tr>
-                <td><img src="./Images/sweater rajut.jpg"><span>Sweater Rajut</span>
+                <td><img src="./Images/sweater rajut.jpg">
                     <h6>Shoree</h6>
-                    <h5>Rp. 84.999,-</h5>
                     <h6>Stock</h6>
+                    <h4>Sweater Rajut</h4>
+                    <h5>Rp. 84.999,-</h5>
                     <button>Detail</button></td>
             </tr>
         </table>
